tests/parsing/reinstantiation_in_inst/stderr.golden
error: reinstantiation of 's', first instantiation line 2 column 3
bus.fbd +3:3
   |
 3 |   s static
   |   ^
